SUBDIRS=lib ao-rawload ao-dbg ao-bitbang ao-eeprom ao-list \
	ao-load ao-telem ao-send-telem ao-sky-flash \
	ao-dumpflash ao-edit-telem ao-dump-up ao-elftohex \
	ao-flash ao-usbload ao-test-igniter ao-test-baro \
	ao-test-flash ao-cal-accel ao-test-gps ao-usbtrng \
	ao-cal-freq ao-makebin
if LIBSTLINK
SUBDIRS += ao-stmload
endif
